@@ -5,14 +5,17 @@ import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.jayway.jsonpath.DocumentContext;
 import com.jayway.jsonpath.JsonPath;
+import com.msmeli.dto.response.*;
+import com.jayway.jsonpath.DocumentContext;
+import com.jayway.jsonpath.JsonPath;
 import com.msmeli.dto.response.CatalogItemResponseDTO;
 import com.msmeli.dto.response.ImageAndSkuDTO;
 import com.msmeli.dto.response.ListingTypeResponseDTO;
 import com.msmeli.feignClient.MeliFeignClient;
-import com.msmeli.model.Category;
 import com.msmeli.model.Item;
-import com.msmeli.model.Seller;
 import com.msmeli.repository.*;
+import feign.FeignException;
+import org.modelmapper.ModelMapper;
 import feign.FeignException;
 import org.springframework.boot.context.event.ApplicationReadyEvent;
 import org.springframework.context.event.EventListener;
@@ -38,9 +41,9 @@ public class MeliService {
     private final SellerReputationRepository sellerReputationRepository;
     private final SellerTransactionRepository sellerTransactionRepository;
 
-    private final ObjectMapper objectMapper;
+    private final ModelMapper modelMapper;
 
-    public MeliService(MeliFeignClient meliFeignClient, ItemRepository itemRepository, CategoryRepository categoryRepository, SellerRepository sellerRepository, SellerRatingRepository sellerRatingRepository, SellerReputationRepository sellerReputationRepository, SellerTransactionRepository sellerTransactionRepository, ObjectMapper objectMapper) {
+    public MeliService(MeliFeignClient meliFeignClient, ItemRepository itemRepository, CategoryRepository categoryRepository, SellerRepository sellerRepository, SellerRatingRepository sellerRatingRepository, SellerReputationRepository sellerReputationRepository, SellerTransactionRepository sellerTransactionRepository, ObjectMapper objectMapper, ModelMapper modelMapper) {
         this.meliFeignClient = meliFeignClient;
         this.itemRepository = itemRepository;
         this.categoryRepository = categoryRepository;
@@ -48,7 +51,7 @@ public class MeliService {
         this.sellerRatingRepository = sellerRatingRepository;
         this.sellerReputationRepository = sellerReputationRepository;
         this.sellerTransactionRepository = sellerTransactionRepository;
-        this.objectMapper = objectMapper;
+        this.modelMapper = new ModelMapper();
     }
 
 
@@ -64,6 +67,28 @@ public class MeliService {
         return sellerRepository.findById(sellerId).orElseThrow(() -> new Exception("Seller not found"));
     }
 
+//    public Integer getPosition(String categoryId, String itemId) throws JsonProcessingException, ResourceNotFoundException {
+//
+//        try {
+//            DocumentContext json = JsonPath.parse(meliFeignClient.getItemPositionByCategory(categoryId));
+//
+//            String content = json.read("$.content[*]").toString();
+//            List<PositionResponseDTO> positionList = objectMapper.readValue(content, new TypeReference<>(){});
+//
+//            AtomicReference<Integer> position = new AtomicReference<>(0);
+//
+//            positionList.forEach( e -> {
+//                if(e.getId().equals(itemId)){
+//                    position.set(e.getPosition());
+//                };
+//            });
+//            return position.get();
+//        } catch (ResourceNotFoundException e) {
+//            return null;
+//        }
+//
+//    }
+
 
     public Category saveCategory(String categoryId){
         DocumentContext json = JsonPath.parse(meliFeignClient.getCategory(categoryId));
@@ -73,6 +98,11 @@ public class MeliService {
                     .categoryId(json.read("$.id"))
                     .categoryName(json.read("$.name"))
                     .build());
+    }
+
+    public String getSellerNickname(Integer sellerId){
+        DocumentContext json = JsonPath.parse(meliFeignClient.getSellerBySellerId(sellerId));
+        return json.read("$.seller.nickname");
     }
 
     public Seller saveSeller(Integer seller_id){
@@ -86,11 +116,6 @@ public class MeliService {
                         .sellerId(sellerJson.read("$.id"))
                         .nickname(sellerJson.read("$.nickname"))
                         .build());
-    }
-
-    public String getSellerNickname(Integer sellerId){
-        DocumentContext json = JsonPath.parse(meliFeignClient.getSellerBySellerId(sellerId));
-        return json.read("$.seller.nickname");
     }
 
     public String getListingTypeName(String listingTypeId) throws JsonProcessingException {
@@ -110,6 +135,12 @@ public class MeliService {
 
         return null;
 
+    }
+
+    public String getSellerNickname(Integer sellerId){
+        DocumentContext json = JsonPath.parse(meliFeignClient.getSellerBySellerId(sellerId));
+//        DocumentContext sellerJson = JsonPath.parse((Object) json.read("$.seller.nickname"));
+        return json.read("$.seller.nickname");
     }
 
     public Integer getPositionMethod(DocumentContext positionByItemId){
@@ -138,32 +169,6 @@ public class MeliService {
     }
 
 
-    private ImageAndSkuDTO getItemImageAndSku(String itemId) throws ParseException {
-        DocumentContext item = JsonPath.parse(meliFeignClient.getImageAndSku(itemId));
-        List<Object> skuObj = item.read("$.attributes[?(@.id == 'SELLER_SKU')].values[0].name");
-
-        String sku = null;
-        String image = item.read("$.pictures[0].url");
-        String status = item.read("$.status");
-        String created_date_item = item.read("$.date_created");
-        String updated_date_item = item.read("$.last_updated");
-
-        SimpleDateFormat dateFormatter = new SimpleDateFormat("yyyy-MM-dd'T'HH:mm:ss.SSS'Z'");
-
-        Date createdDate = dateFormatter.parse(created_date_item);
-        Date updatedDate = dateFormatter.parse(updated_date_item);
-
-        if (!skuObj.isEmpty()) sku = skuObj.get(0).toString();
-
-        return ImageAndSkuDTO.builder()
-                .sku(sku)
-                .image_url(image)
-                .status_condition(status)
-                .created_date_item(createdDate)
-                .updated_date_item(updatedDate)
-                .build();
-    }
-
     private Item filterJsonData(DocumentContext itemContext) throws JsonProcessingException, ParseException {
         Number price = itemContext.read("$.price");
 
@@ -171,12 +176,11 @@ public class MeliService {
 
         String categoryId = itemContext.read("$.category_id");
         String itemId = itemContext.read("$.id");
-        String productId = itemContext.read("$.catalog_product_id");
 
         return Item
                 .builder()
                 .item_id(itemId)
-                .catalog_product_id(productId)
+                .catalog_product_id(itemContext.read("$.catalog_product_id"))
                 .title(itemContext.read("$.title"))
                 .category_id(categoryId)
                 .price(price.doubleValue())
@@ -184,8 +188,8 @@ public class MeliService {
                 .available_quantity(itemContext.read("$.available_quantity"))
                 .sellerId(itemContext.read("$.seller.id"))
                 .update_date_db(LocalDateTime.now())
-                .listing_type_name(getListingTypeName(itemContext.read("$.listing_type_id")))
-                .catalog_position(getPosition(itemId, productId))
+                .listing_type_id(itemContext.read("$.listing_type_id"))
+                .catalog_position(0)
                 .statusCondition(imageAndSku.getStatus_condition())
                 .urlImage(imageAndSku.getImage_url())
                 .sku(imageAndSku.getSku())
@@ -196,58 +200,41 @@ public class MeliService {
 
     @EventListener(ApplicationReadyEvent.class)
     @Order(1)
-    public void saveSellerItems(){
-            DocumentContext json = JsonPath.parse(meliFeignClient.getSellerByNickname("MORO TECH"));
+    public void saveSellerItems() {
+         SellerResponseDTO responseDTO = meliFeignClient.getSellerByNickname("MORO TECH");
 
-            List<Object> items = json.read("$.results[*]");
-
-            itemRepository.saveAll(items
-                    .stream()
-                    .map((e) -> {
-                        try {
-                            return filterJsonData(JsonPath.parse(e));
-                        } catch (JsonProcessingException | ParseException ex) {
-                            throw new RuntimeException(ex);
-                        }
-                    })
-                    .collect(Collectors.toList())
-            );
+         List<Item> items = responseDTO.getResults().parallelStream().map(e ->{
+             ItemAttributesDTO attributesDTO = meliFeignClient.getItemAtributtes(e.getId());
+             e.setImage_url(attributesDTO.getPictures().get(0).getUrl());
+             e.setCreated_date_item(attributesDTO.getDate_created());
+             e.setUpdated_date_item(attributesDTO.getLast_updated());
+             e.setSku(attributesDTO.getAttributes().parallelStream().filter(att-> att.getName().equals("SKU")).toList().get(0).getValue_name());
+             Item item = modelMapper.map(e,Item.class);
+             item.setUpdate_date_db(LocalDateTime.now());
+             item.setSellerId(responseDTO.getSeller().getId());
+             return item;
+         }).toList();
+         itemRepository.saveAll(items);
     }
 
-    public List<CatalogItemResponseDTO> getSellerItemCatalog(String product_catalog_id){
 
-        DocumentContext jsonProduct = JsonPath.parse(meliFeignClient.getProductSearch(product_catalog_id));
+    public List<CatalogItemResponseDTO> getSellerItemCatalog(String product_catalog_id) {
 
-        List<Object> catalogProducts = jsonProduct.read("$.results[*]");
+        ItemCatalogResponseDTO responseDTO = meliFeignClient.getProductSearch(product_catalog_id);
 
-        return catalogProducts
-                .stream()
-                .map( (product) -> {
-                    DocumentContext productContext = JsonPath.parse(product);
 
-                    Number price = productContext.read("$.price");
+        return responseDTO.getResults().parallelStream().peek(e ->{
 
-                    try {
-                        String itemId = productContext.read("$.item_id");
-                        ImageAndSkuDTO imageAndSkuDTO = getItemImageAndSku(itemId);
+            ItemAttributesDTO attributesDTO = meliFeignClient.getItemAtributtes(e.getItem_id());
+            SellerResponseDTO sellerResponseDTO = meliFeignClient.getSellerBySellerId(e.getSeller_id());
 
-                        return CatalogItemResponseDTO
-                                .builder()
-                                .price(price.doubleValue())
-                                .seller_nickname(getSellerNickname(productContext.read("$.seller_id")))
-                                .sold_quantity(productContext.read("$.sold_quantity"))
-                                .available_quantity(productContext.read("$.available_quantity"))
-                                .category_id(productContext.read("$.category_id"))
-                                .listing_type_name(getListingTypeName(productContext.read("$.listing_type_id")))
-//                                .position(getPosition(itemId, product_catalog_id))
-                                .created_date_item(imageAndSkuDTO.getCreated_date_item())
-                                .updated_date_item(imageAndSkuDTO.getUpdated_date_item())
-                                .build();
-                    } catch (ParseException | JsonProcessingException e) {
-                        throw new RuntimeException(e);
-                    }
-                })
-                .toList();
+            e.setCreated_date_item(attributesDTO.getDate_created());
+            e.setUpdated_date_item(attributesDTO.getLast_updated());
+            e.setSeller_nickname(sellerResponseDTO.getSeller().getNickname());
+
+            System.out.println(e.getSeller_id());
+
+        }).toList();
     }
 
 }
